# iOSTestAgents

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
scenarios/: example_settings.yaml  multiplayer_example.yaml  safari_navigation.yaml  settings_wifi.yaml  valar_two_player.yaml
src/iostestagents/: __init__.py  cli.py
src/iostestagents/agent/: loop.py  models.py  ui_parser.py
src/iostestagents/device/: __init__.py  base.py  bridge.py  idb.py  simulator.py  xcodebuildmcp.py
src/iostestagents/llm/: anthropic.py  base.py  ollama.py  openai.py  registry.py
src/iostestagents/orchestrator/: __init__.py  coordinator.py  scenario.py
src/iostestagents/util/: logging.py
src/mobiletestai/: __init__.py  cli.py
src/mobiletestai/agent/: loop.py  models.py  prompts.py  ui_parser.py
src/mobiletestai/device/: __init__.py  base.py  bridge.py  idb.py  simulator.py  xcodebuildmcp.py
src/mobiletestai/llm/: anthropic.py  base.py  ollama.py  openai.py  registry.py
src/mobiletestai/orchestrator/: __init__.py  coordinator.py  sync.py
src/mobiletestai/util/: logging.py
testbridge/TestBridge/: TestBridgeApp.swift
testbridge/TestBridge.xcodeproj/: project.pbxproj
testbridge/TestBridge.xcodeproj/xcshareddata/xcschemes/: TestBridge.xcscheme
testbridge/TestBridgeUITests/: AccessibilitySerializer.swift  HTTPServer.swift  Handlers.swift  Router.swift  TestBridgeUITests.swift
tests/: conftest.py  test_agent.py  test_backends.py  test_cli.py  test_device.py  test_llm.py  test_orchestrator.py  test_ui_parser.py  test_xcodebuildmcp.py
