[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobiletestai"
version = "0.1.0"
description = "AI-powered iOS app testing framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["ios", "testing", "automation", "llm", "ai", "simulator", "xcode", "multiplayer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.9.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/TomMcGrath7/MobileAppTesterAgent"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
mobiletestai = "mobiletestai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
