[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iostestagents"
version = "0.1.0"
description = "AI-powered iOS app testing framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["ios", "testing", "automation", "llm", "ai", "simulator", "xcode", "multiplayer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.9.0",
    "anthropic>=0.109.1",
    "openai>=1.50",
    "pydantic>=2.0",
    "rich>=13.0",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/TomMcGrath7/iOSTestAgents"
Repository = "https://github.com/TomMcGrath7/iOSTestAgents"
Issues = "https://github.com/TomMcGrath7/iOSTestAgents/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML",
]

[project.scripts]
iostestagents = "iostestagents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/iostestagents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a real simulator/LLM (deselected by default in CI)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
# Long lines inside the LLM prompt template are prompt content, not code
"src/iostestagents/agent/prompts.py" = ["E501"]

[tool.coverage.run]
source = ["iostestagents"]

[tool.coverage.report]
fail_under = 78
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["src/iostestagents"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true
